added subscibe for the store news

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,19 @@ body,
   height: 100%;
 }
 
+.transition-height {
+  overflow: hidden;
+  height: 0;
+  transform-origin: top;
+  transform: scaleY(0);
+  transition: transform 0.5s ease-in-out;
+}
+
+.show {
+  transform: scaleY(1);
+  height: 45vh;
+}
+
 .popFromBottomText {
   animation: popFromBottom 0.7s ease-in-out;
 }
@@ -17,13 +30,41 @@ body,
 }
 
 .animate-fadeInDown {
-  animation: fadeInDown 0.5s ease-in-out;
+  animation: fadeInDown 0.2s ease-out;
+}
+
+.animate-fadeInFromLeft {
+  animation: fadeInFromLeft 0.5s ease-in-out;
+}
+
+@keyframes fadeInFromLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 @keyframes fadeInUp {
   0% {
     transform: translateY(100%);
     opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    transform: translateY(-5%);
+    opacity: 0.7;
   }
 
   100% {
