--- a/app/globals.css
+++ b/app/globals.css
@@ -81,3 +81,68 @@ body,
     transform: translateY(0);
   }
 }
+
+/* STATIC PAGES VIEW */
+
+.static-page {
+  min-height: 100vh;
+  display: flex;
+  margin: 0 auto;
+  max-width: 1370px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 60px;
+}
+
+.static-page h1,
+h2,
+h3,
+h4,
+h6 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.static-page h1 {
+  font-size: 2.5rem;
+}
+
+.static-page h2 {
+  font-size: 2rem;
+}
+
+.static-page h3 {
+  font-size: 1.5rem;
+}
+
+.static-page h4 {
+  font-size: 1.25rem;
+}
+
+.static-page h5 {
+  font-size: 1rem;
+}
+
+.static-page h6 {
+  font-size: 0.75rem;
+}
+
+.static-page p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.static-page li {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin-bottom: 10px;
+  margin-left: 25px;
+  list-style: disc;
+}
